Modificaciones en las media queries

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -37,21 +37,19 @@
         <img class="nosotrosImagen" src="../assets/images/vision.jpeg" alt="Visión">
         <h4 class="nosotrosTitulo">Visión</h4>
         <p class="nosotrosParrafo">
-          Ser una Consultora de Recursos Humanos que destaque por la calidad y excelencia en la prestación de sus servicios y brinde acompañamiento a organizaciones e individos, optimizando sus propios recursos en la búsqueda del cambio y la mejora</p>  <br>
+          Ser una Consultora de Recursos Humanos que destaque por la calidad y excelencia en la prestación de sus servicios y brinde acompañamiento a organizaciones e individos, optimizando sus propios recursos en la búsqueda del cambio y la mejora</p>  
       </div>  
       <div class="nosotros nosotrosDos"> 
         <img class="nosotrosImagen" src="../assets/images/valores.jpeg" alt="Valores">   
         <h4 class="nosotrosTitulo">Valores</h4>
         <p class="nosotrosParrafo">
-          Compromiso, ética e integridad en el trabajo, como forma de fidelización con el cliente. Flexibilidad para adaptarnos rapidamente a las necesidades de nuestros clientes. Innovación en nuestros procesos de mejora continua para lograr la máxima calidad en nuestros servicios. Confidencialidad para no divulgar ninguna información recabada de nuestros clientes.          
-        </p>
+          Compromiso, ética e integridad en el trabajo, como forma de fidelización con el cliente. Flexibilidad para adaptarnos rapidamente a las necesidades de nuestros clientes. Innovación en nuestros procesos de mejora continua para lograr la máxima calidad en nuestros servicios. Confidencialidad para no divulgar ninguna información recabada de nuestros clientes.</p>
       </div>
       <div class="nosotros nosotrosTres">
         <img class="nosotrosImagen" src="../assets/images/mision.png" alt="Misión">
         <h4 class="nosotrosTitulo">Misión</h4>
         <p class="nosotrosParrafo">
-            Brindar consuloría y asesoramiento personalizado a nuestros clientes en materia de Gestión del Talento con el objetivo de satisfacer sus necesidades y generar valor, incorporando talento estratégico e implementado soluciones valiosas.
-        </p> <br>
+          Brindar consuloría y asesoramiento personalizado a nuestros clientes en materia de Gestión del Talento con el objetivo de satisfacer sus necesidades y generar valor, incorporando talento estratégico e implementado soluciones valiosas.</p>
       </div>
     </main>
 
