Ajustes en los puntos de quiebre 320px y 425px

--- a/pages/busquedas.html
+++ b/pages/busquedas.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-      <h4>La búsqueda y selección de talentos es uno de los objetivos prioritarios de todas las organizaciones.</h4>
+      <h4 id="busquedas">La búsqueda y selección de talentos es uno de los objetivos prioritarios de todas las organizaciones.</h4>
 
       <section class="menuBusquedas">
         
